Block context menu on non text field components and fix scrollbar styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,9 +14,11 @@
 
   &::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
 
     @media (max-width: 500px) {
       width: 5px;
+      height: 5px;
     }
 
     &-button {
